# gallery_project

./: .env.example  .gitignore  README.md  package.json  pyproject.toml  req.pip
apps/core/: apps.py
apps/gallery/: admin.py  apps.py  models.py  urls.py  views.py
assets/js/: main.js
assets/scss/: _variables.scss  main.scss
config/: settings.py  urls.py
static/css/: main.css  main.css.map  main.min.css  main.min.css.map  style.css
static/js/: gallery.js  main.js  main.js.map  main.min.js  main.min.js.map
templates/: base.html  header.html
templates/gallery/: index.html
